--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   }
   
   .bar {
-    fill: rgba(255,255,255, 0.05);
+    fill: rgba(255,255,255, 0.025);
   }
 
 </style>
@@ -95,8 +95,30 @@ d3.tsv("likes.tsv", function(error, data) {
 
   let histoData = [];
 
+
   for(let date = start; date < end; date = new Date(date.getTime() + dayMs * granularity)) {
-    histoData.push(Math.floor(Math.random() * 100));
+    let 
+        weekWaveAmp = 10, 
+        slowWaveAmp = weekWaveAmp * 1,
+        baseToRandomRatio = .15,
+        minVotes = weekWaveAmp * baseToRandomRatio,
+        randomMult = weekWaveAmp * (1 - baseToRandomRatio) * Math.random(),
+        range = (end - start) / (dayMs),
+        weekWaveDays = 7,
+        weekWavePeriod = (range / weekWaveDays),
+        slowWaveDays = range * 3,
+        slowWavePeriod = (range / slowWaveDays),
+        alpha = (date - start) / (end - start),
+        randomWave = randomMult * Math.random() * (Math.sin(Math.PI * weekWavePeriod)),
+        weekWave = weekWaveAmp * Math.abs(Math.sin(alpha * Math.PI * weekWavePeriod)),
+        slowWave = slowWaveAmp * Math.abs(Math.sin(alpha * Math.PI * slowWavePeriod))
+        ;
+    histoData.push(Math.floor(
+      minVotes
+      + randomWave
+      + weekWave
+      + slowWave
+      ));
   }
 
   x.domain(d3.extent(data, function(d) { return d.date; }));
@@ -108,7 +130,7 @@ d3.tsv("likes.tsv", function(error, data) {
       yh = d3.scaleLinear().rangeRound([height, 0]);
 
   xh.domain([0, histoData.length]);
-  yh.domain([0, d3.max(histoData, function(d) { return d * 2; })]);
+  yh.domain([0, d3.max(histoData, function(d) { return d * 0 + 50; })]);
 
   let yAxisRight = d3.axisRight(yh);
 
@@ -168,12 +190,14 @@ d3.tsv("likes.tsv", function(error, data) {
       .data(data)
     .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", d => d.page === 'Average' ? 7 : 3.5)
+      .attr("r", d => d.page === 'Average' ? 5.5 : 1.3)
       .attr("cx", function(d) { return x(d.date); })
+      .attr("data", (d) => d.page)
       .attr("cy", function(d) { return y(d.value); })
+      .style("opacity", (d) => d.page === 'Average' ? '1' : '1')
       .style("fill", function(d) { return  d.page === 'Average' ? '#fff' : color(d.page); });
 
-  let legendColumnWidth = 96;
+  let legendColumnWidth = 72;
 // legend
   let legend = svg.selectAll(".legend")
       .data(color.domain())
@@ -181,15 +205,15 @@ d3.tsv("likes.tsv", function(error, data) {
       .attr("class", "legend")
       .attr("transform", function(d, i) { return "translate(" + legendColumnWidth * i + ", 0)"; });
 
-  legend.append("rect")
-      .attr("x", 16)
-      .attr("width", 16)
-      .attr("height", 4)
+  legend.append("circle")
+      .attr("cx", 32)
+      .attr("r", d => d.page === 'Average' ? 5 : 2)
+      .attr("r", 3)
       .style("fill", color);
 
   legend.append("text")
       .attr("x", 40)
-      .attr("y", 2)
+      .attr("y", 0)
       .attr("dy", ".35em")
       // .style("text-anchor", "end")
       .text(function(d) { return d; });
