alignments and refactor

--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     background-color: #222;
 	}
 
-	.axis path,
-	.axis line {
+	.axis path {
 	  fill: none;
 	  stroke: #cdcdcd;
 	  shape-rendering: crispEdges;
 	}
+
+  .axis line {
+    fill: none;
+    stroke: rgba(255, 255, 255, .125);
+    shape-rendering: crispEdges;
+  }
 
 	.dot {
 	  stroke: none;
@@ -27,6 +32,10 @@
     fill: rgba(255,255,255, 0.025);
   }
 
+  .domain {
+    opacity: 0;
+  }
+
 </style>
 </head><body>
 <script src="./d3.v4.min.js"></script>
@@ -34,30 +43,11 @@
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script>
-let margin = {top: 16, right: 40, bottom: 40, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+const unit = 16,
+    margin = {top: unit * 2, right: unit * 3, bottom: unit * 2, left: unit * 3},
+    width = 640 - margin.left - margin.right,
+    height = 320 - margin.top - margin.bottom;
 
-let x = d3.scaleTime()
-          .range([0, width]);
-
-let y = d3.scaleLinear()
-          .range([height, 0]);
-
-let color = d3.scaleOrdinal(d3.schemePaired);
-
-let xAxis = d3.axisBottom(x)
-              .scale(x)
-              .tickSize(6, 0)
-              .tickFormat(d3.timeFormat("%m/%Y"));
-
-let yAxis = d3.axisLeft(y);
-
-let svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
 // scatter plot
@@ -86,7 +76,7 @@ d3.tsv("likes.tsv", function(error, data) {
 
   data.forEach(function(d) {
     d.date = new Date(d.date);
-    });
+  });
 
   // generate histogram csv
   let [start, end] = d3.extent(data, function(d) { return d.date; }).map((s) => new Date(s));
@@ -95,10 +85,8 @@ d3.tsv("likes.tsv", function(error, data) {
 
   let histoData = [];
 
-
   for(let date = start; date < end; date = new Date(date.getTime() + dayMs * granularity)) {
-    let 
-        weekWaveAmp = 50, 
+    let weekWaveAmp = 50, 
         slowWaveAmp = weekWaveAmp * .25,
         randomWaveAmp = weekWaveAmp * .5,
         baseToRandomRatio = .75,
@@ -124,21 +112,82 @@ d3.tsv("likes.tsv", function(error, data) {
       ));
   }
 
+
+  let svg = d3.select("body").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+    .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+  const tickSize = 8;
+
+  let color = d3.scaleOrdinal(d3.schemePaired),
+      x = d3.scaleTime()
+        .range([0, width]),
+      y = d3.scaleLinear()
+          .range([height, 0]),
+      xh = d3.scaleLinear()
+          .range([0, width]),
+      yh = d3.scaleLinear().range([height, 0]),
+      xAxis = d3.axisBottom(x)
+        .scale(x)
+        .tickSize(tickSize, 0)
+        .tickFormat(d3.timeFormat("%m %Y")),
+      yAxis = d3.axisLeft(y)
+        .tickSize(tickSize, 0),
+      yAxisRight = d3.axisRight(yh)
+        .tickSize(tickSize, 0);
+
   x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain(d3.extent(data, function(d) { return d.value; })).nice();
-  y.domain(d3.extent(data, function(d) { return d.value; })).nice();
-  y.domain([.35, .7]);
-
-  let xh = d3.scaleLinear().range([0, width]),
-      yh = d3.scaleLinear().rangeRound([height, 0]);
-
+  // y.domain(d3.extent(data, function(d) { return d.value; })).nice();
+  // y.domain([0, 1]);
+  y.domain([.35, .65]);
   xh.domain([0, histoData.length]);
-  yh.domain([0, d3.max(histoData, function(d) { return Math.max(d * 3, 100); })]);
+  // yh.domain([0, d3.max(histoData, (d) => d)]);
+  yh.domain([0, 100]);
 
-  let yAxisRight = d3.axisRight(yh);
+  // draw x axis
+  const xAxisPos = height + margin.bottom * .35;
+  svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + xAxisPos + ")")
+      .call(xAxis)
+    // .append("text")
+    //   .attr("class", "label")
+    //   .attr("x", 0)
+    //   .attr("y", margin.bottom * .5)
+    //   .style("text-anchor", "start")
+    //   .text("Date");
 
-// histogram
- svg.append('g').attr('class', 'histo')
+  // draw y axis left
+  const yAxisOffsetX = - margin.left * .33;
+  svg.append("g")
+      .attr("class", "y axis")
+      .call(yAxis)
+      .attr("transform", "translate(" + yAxisOffsetX + ", 0)")
+    .append("text")
+      .attr("class", "label")
+      .attr("transform", "rotate(-90)")
+      .attr("y", -4)
+      .attr("dy", unit)
+      .style("text-anchor", "end")
+      .text("Value")
+
+  // draw y axis right
+  const yAxisRightPos = width + margin.left * .33;
+  svg.append("g")
+      .attr("class", "y axis y-axis--right")
+      .attr("transform", "translate( " + yAxisRightPos + "," + 0 + ")")
+      .call(yAxisRight)
+    .append("text")
+      .attr("class", "label")
+      .attr("transform", "rotate(90)")
+      .attr("y", -4)
+      .attr("dy", "1.5em")
+      .text("Votes")
+
+  // draw histogram
+  svg.append('g').attr('class', 'histo')
     .selectAll(".bar")
     .data(histoData)
     .enter().append("rect")
@@ -148,47 +197,7 @@ d3.tsv("likes.tsv", function(error, data) {
       .attr("width", Math.floor(width / histoData.length))
       .attr("height", function(d) { return height - yh(d); });
 
-// x axis
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-      .select(".domain").remove()
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Date");
-
-//y axis left
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-      .select(".domain").remove()
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Value")
-
-//y axis right
-  svg.append("g")
-      .attr("class", "y axis y-axis--right")
-      .attr("transform", "translate( " + width + ", 0 )")
-      .call(yAxisRight)
-      .select(".domain").remove()
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Number of votes")
-
-// scatter plot
+  // draw scatter plot
   svg.selectAll(".dot")
       .data(data)
     .enter().append("circle")
@@ -200,33 +209,25 @@ d3.tsv("likes.tsv", function(error, data) {
       .style("opacity", (d) => d.page === 'Average' ? '1' : '1')
       .style("fill", function(d) { return  d.page === 'Average' ? '#fff' : color(d.page); });
 
-  let legendColumnWidth = 72;
-// legend
+  // draw legend
+  let legendColumnWidth = 60;
   let legend = svg.selectAll(".legend")
       .data(color.domain())
     .enter().append("g")
       .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(" + legendColumnWidth * i + ", 0)"; });
+      .attr("transform", (d, i) => "translate(" + legendColumnWidth * i + ", " + -unit + ")" );
 
   legend.append("circle")
-      .attr("cx", 32)
+      .attr("cx", 16)
       .attr("r", d => d.page === 'Average' ? 5 : 2)
       .attr("r", 3)
       .style("fill", color);
 
   legend.append("text")
-      .attr("x", 40)
+      .attr("x", 24)
       .attr("y", 0)
       .attr("dy", ".35em")
       // .style("text-anchor", "end")
-      .text(function(d) { return d; });
-
+      .text((d) => d);
 });
-
-function customYAxis(g) {
-  g.call(yAxis);
-  g.select(".domain").remove();
-  // g.selectAll(".tick:not(:first-of-type) line").attr("stroke", "#777").attr("stroke-dasharray", "2,2");
-  // g.selectAll(".tick text").attr("x", 4).attr("dy", -4);
-}
 </script></body></html>
