--- a/index.html
+++ b/index.html
@@ -1,233 +1,17 @@
 <!DOCTYPE html>
 <!-- saved from url=(0062)https://bl.ocks.org/sebg/raw/6f7f1dd55e0c52ce5ee0dac2b2769f4b/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<style>
+<html>
 
-	body {
-	  font: 10px sans-serif;
-    background-color: #222;
-	}
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" type="text/css" href="./styles.css" media="screen" />
+</head>
 
-	.axis path {
-	  fill: none;
-	  stroke: #cdcdcd;
-	  shape-rendering: crispEdges;
-	}
+<body>
+    <div class="main"></div>
+    <script src="./d3.v4.min.js"></script>
+    <script src="./d3-scale-chromatic.v1.min.js"></script>
+    <script src="./graph.js"></script>
+</body>
 
-  .axis line {
-    fill: none;
-    stroke: rgba(255, 255, 255, .125);
-    shape-rendering: crispEdges;
-  }
-
-	.dot {
-	  stroke: none;
-	}
-
-  text {
-    fill: rgba(255,255,255,.33);  
-  }
-  
-  .bar {
-    fill: rgba(255,255,255, 0.025);
-  }
-
-  .domain {
-    opacity: 0;
-  }
-
-</style>
-</head><body>
-<script src="./d3.v4.min.js"></script>
-<script src="https://d3js.org/d3-color.v1.min.js"></script>
-<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script>
-const unit = 16,
-    margin = {top: unit * 2, right: unit * 3, bottom: unit * 2, left: unit * 3},
-    width = 640 - margin.left - margin.right,
-    height = 320 - margin.top - margin.bottom;
-
-
-
-// scatter plot
-d3.tsv("likes.tsv", function(error, data) {
-  if (error) throw error;
-
-  data.forEach(function(d) {
-    d.value = +d.value;
-    if(isNaN(d.value)) {
-      d.value = 0;
-    }
-  });
-
-  let byDate = {};
-  data.forEach(function(d) {
-    if(!byDate[d.date]) byDate[d.date] = [];
-    byDate[d.date].push(d);
-  });
-  Object.keys(byDate).forEach(function(k) {
-    data.push({
-      page: 'Average',
-      date: k,
-      value: byDate[k].reduce((accum, current) => accum + current.value, 0) / byDate[k].length
-    });
-  });
-
-  data.forEach(function(d) {
-    d.date = new Date(d.date);
-  });
-
-  // generate histogram csv
-  let [start, end] = d3.extent(data, function(d) { return d.date; }).map((s) => new Date(s));
-  const dayMs = 86400 * 1000,
-        granularity = 7;
-
-  let histoData = [];
-
-  for(let date = start; date < end; date = new Date(date.getTime() + dayMs * granularity)) {
-    let weekWaveAmp = 50, 
-        slowWaveAmp = weekWaveAmp * .25,
-        randomWaveAmp = weekWaveAmp * .5,
-        baseToRandomRatio = .75,
-
-        minVotes = randomWaveAmp * baseToRandomRatio,
-        randomMult = (1 - baseToRandomRatio) * Math.random(),
-        range = (end - start) / (dayMs),
-        weekWaveDays = 7,
-        weekWavePeriod = (range / weekWaveDays),
-        slowWaveDays = range * 3,
-        slowWavePeriod = (range / slowWaveDays),
-        alpha = (date - start) / (end - start),
-
-        randomWave = randomWaveAmp * randomMult * (Math.sin(Math.PI * weekWavePeriod)),
-        weekWave = weekWaveAmp * Math.abs(Math.sin(alpha * Math.PI * weekWavePeriod)),
-        slowWave = slowWaveAmp * Math.abs(Math.sin(alpha * Math.PI * slowWavePeriod))
-        ;
-    histoData.push(Math.floor(
-      minVotes
-      + randomWave
-      + weekWave
-      + slowWave
-      ));
-  }
-
-
-  let svg = d3.select("body").append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom)
-    .append("g")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-  const tickSize = 8;
-
-  let color = d3.scaleOrdinal(d3.schemePaired),
-      x = d3.scaleTime()
-        .range([0, width]),
-      y = d3.scaleLinear()
-          .range([height, 0]),
-      xh = d3.scaleLinear()
-          .range([0, width]),
-      yh = d3.scaleLinear().range([height, 0]),
-      xAxis = d3.axisBottom(x)
-        .scale(x)
-        .tickSize(tickSize, 0)
-        .tickFormat(d3.timeFormat("%m %Y")),
-      yAxis = d3.axisLeft(y)
-        .tickSize(tickSize, 0),
-      yAxisRight = d3.axisRight(yh)
-        .tickSize(tickSize, 0);
-
-  x.domain(d3.extent(data, function(d) { return d.date; }));
-  // y.domain(d3.extent(data, function(d) { return d.value; })).nice();
-  // y.domain([0, 1]);
-  y.domain([.35, .65]);
-  xh.domain([0, histoData.length]);
-  // yh.domain([0, d3.max(histoData, (d) => d)]);
-  yh.domain([0, 100]);
-
-  // draw x axis
-  const xAxisPos = height + margin.bottom * .35;
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + xAxisPos + ")")
-      .call(xAxis)
-    // .append("text")
-    //   .attr("class", "label")
-    //   .attr("x", 0)
-    //   .attr("y", margin.bottom * .5)
-    //   .style("text-anchor", "start")
-    //   .text("Date");
-
-  // draw y axis left
-  const yAxisOffsetX = - margin.left * .33;
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-      .attr("transform", "translate(" + yAxisOffsetX + ", 0)")
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", -4)
-      .attr("dy", unit)
-      .style("text-anchor", "end")
-      .text("Value")
-
-  // draw y axis right
-  const yAxisRightPos = width + margin.left * .33;
-  svg.append("g")
-      .attr("class", "y axis y-axis--right")
-      .attr("transform", "translate( " + yAxisRightPos + "," + 0 + ")")
-      .call(yAxisRight)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(90)")
-      .attr("y", -4)
-      .attr("dy", "1.5em")
-      .text("Votes")
-
-  // draw histogram
-  svg.append('g').attr('class', 'histo')
-    .selectAll(".bar")
-    .data(histoData)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d, i) { return xh(i); })
-      .attr("y", (d) => yh(d))
-      .attr("width", Math.floor(width / histoData.length))
-      .attr("height", function(d) { return height - yh(d); });
-
-  // draw scatter plot
-  svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", d => d.page === 'Average' ? 5.5 : 1.3)
-      .attr("cx", function(d) { return x(d.date); })
-      .attr("data", (d) => d.page)
-      .attr("cy", function(d) { return y(d.value); })
-      .style("opacity", (d) => d.page === 'Average' ? '1' : '1')
-      .style("fill", function(d) { return  d.page === 'Average' ? '#fff' : color(d.page); });
-
-  // draw legend
-  let legendColumnWidth = 72;
-  let legend = svg.selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", (d, i) => "translate(" + legendColumnWidth * i + ", " + -unit + ")" );
-
-  legend.append("circle")
-      .attr("cx", 0)
-      .attr("r", d => d.page === 'Average' ? 5 : 2)
-      .attr("r", 3)
-      .style("fill", color);
-
-  legend.append("text")
-      .attr("x", 8)
-      .attr("y", 0)
-      .attr("dy", ".35em")
-      // .style("text-anchor", "end")
-      .text((d) => d);
-});
-</script></body></html>
+</html>
